--- a/app/src/main/res/layout/fragment_moon.xml
+++ b/app/src/main/res/layout/fragment_moon.xml
@@ -7,149 +7,84 @@
     android:background="#E0E0E0">
 
     <TextView
+        android:id="@+id/tvCoords2"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/tvTimer"
+        tools:layout_editor_absoluteX="67dp" />
+
+    <TextView
         android:id="@+id/tvTimer"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="194dp"
         android:text="time"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvCoords2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="67dp" />
 
     <TextView
         android:id="@+id/tvMnSynDay"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="516dp"
-        android:layout_marginEnd="144dp"
         android:text="13"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvMnPhase"
+        tools:layout_editor_absoluteX="67dp" />
 
     <TextView
         android:id="@+id/tvMnPhase"
-        android:layout_width="40dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="439dp"
-        android:layout_marginEnd="306dp"
         android:text="50%"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="477dp"
-        android:layout_marginEnd="77dp"
-        android:text="Dzień miesiąca synodycznego"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="404dp"
-        android:layout_marginEnd="221dp"
-        android:text="Faza księżyca"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvMnSynDay"
+        app:layout_constraintTop_toBottomOf="@+id/tvMnFullDate"
+        tools:layout_editor_absoluteX="67dp" />
 
     <TextView
         android:id="@+id/tvMnFullDate"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="364dp"
-        android:layout_marginEnd="196dp"
         android:text="28/02/2020"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvMnPhase"
+        app:layout_constraintTop_toBottomOf="@+id/tvMnNewDate"
+        tools:layout_editor_absoluteX="67dp" />
 
     <TextView
         android:id="@+id/tvMnNewDate"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="292dp"
-        android:layout_marginEnd="196dp"
         android:text="12/02/2020"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="329dp"
-        android:layout_marginEnd="194dp"
-        android:text="Najbliższa pełnia"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="212dp"
-        android:text="Najbliższy nów"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvMnFullDate"
+        app:layout_constraintTop_toBottomOf="@+id/tvMnDawnTime"
+        tools:layout_editor_absoluteX="67dp" />
 
     <TextView
         android:id="@+id/tvMnDawnTime"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="218dp"
-        android:layout_marginEnd="196dp"
         android:text="21:12:04"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvMnNewDate"
+        app:layout_constraintTop_toBottomOf="@+id/tvMnRiseTime"
+        tools:layout_editor_absoluteX="67dp" />
 
     <TextView
         android:id="@+id/tvMnRiseTime"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="146dp"
-        android:layout_marginEnd="196dp"
         android:text="06:23:12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="183dp"
-        android:layout_marginEnd="278dp"
-        android:text="Zachód"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="273dp"
-        android:text="Wschód"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvMnDawnTime"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="69dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="244dp"
         android:text="Księżyc"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvMnRiseTime"
+        app:layout_constraintTop_toBottomOf="@+id/tvCoords2"
+        tools:layout_editor_absoluteX="67dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
