--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,10 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-        android:text="Settings"
-        app:title="@string/messages_header" />
+        android:text="@string/messages_header"
+        app:title="Settings"/>
     <EditTextPreference
-        android:defaultValue="true"
         android:key="latitude"
         android:selectAllOnFocus="true"
         android:singleLine="true"
