Complete AstroWeather mobile app

--- a/app/src/main/res/layout-land/activity_astro.xml
+++ b/app/src/main/res/layout-land/activity_astro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment2"
         android:name="com.example.astro.fragments.MoonFragment"
         android:layout_width="531dp"
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment" />
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
         android:name="com.example.astro.fragments.SunFragment"
         android:layout_width="531dp"
