--- a/app/src/main/res/layout-w600dp-land/activity_astro.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_astro.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment3"
             android:name="com.example.astro.fragments.SunFragment"
             android:layout_width="798dp"
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment4"
             android:name="com.example.astro.fragments.MoonFragment"
             android:layout_width="798dp"
