--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,16 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btnWeather"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:text="Weather"
-        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAstro" />
+
 
     <Button
         android:id="@+id/btnExit"
@@ -32,8 +23,8 @@
         android:id="@+id/btnAstro"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:text="Astro"
-        app:layout_constraintBottom_toTopOf="@+id/btnWeather"
+        android:text="AstroWeather"
+        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,8 +37,7 @@
         android:text="Settings"
         app:layout_constraintBottom_toTopOf="@+id/btnExit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnWeather" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAstro" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
