--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,22 +17,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnWeather"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="216dp"
-        android:layout_marginEnd="80dp"
-        android:text="Weather"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btnAstro"
         android:layout_width="200dp"
         android:layout_height="70dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="204dp"
         android:layout_marginEnd="80dp"
-        android:text="Astro"
+        android:text="AstroWeather"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
